Fixed layout issues on the chat screen.

--- a/chat-demo-client/src/app/components/chat-bubble/chat-bubble.component.css
+++ b/chat-demo-client/src/app/components/chat-bubble/chat-bubble.component.css
@@ -1,14 +1,11 @@
 .chat-bubble-container {
+    display: flex;
+    align-items: flex-end;
+    flex-direction: column;
     border: 0.5px solid #dedede;
-    /* background-color: #f1f1f1; */
     border-radius: 5px;
     padding: 10px;
     margin: 10px 0;
-  }
-  
-  .darker {
-    border-color: #ccc;
-    /* background-color: #ddd; */
   }
   
   .chat-bubble-container::after {
@@ -18,11 +15,17 @@
   }
 
   .text-right {
-    float: right;
+    align-items: flex-end;
     color: #aaa;
   }
   
   .text-left {
-    float: left;
+    align-items: flex-start;
     color: #999;
   }
+
+.child {  
+  padding: 5px;
+  border: 1px solid rgb(206, 206, 206);
+  margin: 5px;
+}
